[package]
name = "cavernos-cli"
version = "0.1.0"
authors = ["Jordan West <jordwest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parse command line args
structopt = "0.3"

# Parse manifest.json to manipulate the paths when bundling
serde_json = "1.0"

# Embed templates and default assets in the binary for easy distribution
rust-embed = { version = "6.3.0", features = [ "include-exclude"] }
